--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.3.3
   video_player: ^2.9.2
   flutter_svg: ^2.0.10+1
+  http: 1.3.0
 
   flutter:
     sdk: flutter
@@ -47,6 +48,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/background2.png
     - assets/icons/
 
 #  fonts:
